added Firebase, Email/Password Sign in, and Email/Password Sign up

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,10 +1,11 @@
 buildscript {
+    ext.kotlin_version = '2.0.0'
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.0.0'  // or your current version
+        classpath 'com.android.tools.build:gradle:8.0.0'
         // Remove or comment out any Firebase classpath
         // classpath 'com.google.gms:google-services:4.3.15'
     }
