--- a/ios/Flutter/AppFrameworkInfo.plist
+++ b/ios/Flutter/AppFrameworkInfo.plist
@@ -5,22 +5,22 @@
   <key>CFBundleDevelopmentRegion</key>
   <string>en</string>
   <key>CFBundleExecutable</key>
-  <string>GenPlan</string> <!-- Updated to match app name -->
+  <string>App</string>
   <key>CFBundleIdentifier</key>
-  <string>org.heavenya.genplan</string> <!-- Your unique identifier -->
+  <string>io.flutter.flutter.app</string>
   <key>CFBundleInfoDictionaryVersion</key>
   <string>6.0</string>
   <key>CFBundleName</key>
-  <string>GenPlan</string> <!-- Updated to match app name -->
+  <string>App</string>
   <key>CFBundlePackageType</key>
   <string>FMWK</string>
   <key>CFBundleShortVersionString</key>
-  <string>1.0</string> <!-- Update version as needed -->
+  <string>1.0</string>
   <key>CFBundleSignature</key>
   <string>????</string>
   <key>CFBundleVersion</key>
-  <string>1.0.0</string> <!-- Consider using a build number -->
+  <string>1.0</string>
   <key>MinimumOSVersion</key>
-  <string>13.0</string> <!-- Update as needed -->
+  <string>12.0</string>
 </dict>
 </plist>
