--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,12 +1,15 @@
-platform :ios, '13.0'
+# Uncomment this line to define a global platform for your project
+# platform :ios, '12.0'
 
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
 
-# Project settings
-project 'Runner', 'Debug' => :debug, 'Profile' => :release, 'Release' => :release
+project 'Runner', {
+  'Debug' => :debug,
+  'Profile' => :release,
+  'Release' => :release,
+}
 
-# Find Flutter root
 def flutter_root
   generated_xcode_build_settings_path = File.expand_path(File.join('..', 'Flutter', 'Generated.xcconfig'), __FILE__)
   unless File.exist?(generated_xcode_build_settings_path)
@@ -28,21 +31,14 @@ target 'Runner' do
   use_frameworks!
   use_modular_headers!
 
-  # Include Flutter and any other necessary pods
-  pod 'Flutter', :path => 'Flutter'
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
-
   target 'RunnerTests' do
     inherit! :search_paths
   end
 end
 
-# Post-install block to customize CocoaPods settings
 post_install do |installer|
   installer.pods_project.targets.each do |target|
-    target.build_configurations.each do |config|
-      # Set minimum deployment target to iOS 13.0
-      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '13.0'
-    end
+    flutter_additional_ios_build_settings(target)
   end
 end
